syntax = "proto3";
 

option go_package="./;pkt";
package pkt;

message DownloadShardReq{
   bytes VHF=1;
}

message DownloadShardResp{
   bytes data=1;
}

message ErrorMessage{
   int32 code=1;
   string msg=2;
}
 
message SpotCheckStatus{
   string taskId=1;
   repeated uint32 invalidNodeList=2;
}

message SpotCheckTask{
    int32 id = 1; 
    string nodeId=2;
    string addr=3;
    bytes VHF=4;
}

message SpotCheckTaskList{
    string taskId = 1; 
    int32 snid=2;
    repeated SpotCheckTask taskList=3;
}

message StatusRepReq {   
   int32 id=1;                                   
   int32 cpu=2;                          
   int32 memory=3;                          
   int32 bandwidth=4;                        
   int64 maxDataSpace=5;                   
   int64 assignedSpace=6;                   
   int64 usedSpace=7;                       
   repeated string addrs=8;  
   bool relay=9;        
   int32 version=10;     
   int32 rebuilding=11;    
   int64 realSpace=12;  
   int64 tx=13;  
   int64 rx=14;   
   string other=15;    
   string hash=16; 
   uint64 allocSpace=17;
   uint32 availableSpace=18;
}

message StatusRepResp {
   int64 productiveSpace=1; 
   string relayUrl=2;   
   int32 dnStatus= 3;                
}


message TaskList{
    repeated bytes tasklist=1;
    int64 expiredTime=2;
    int32 srcNodeID=3;
    int32 expiredTimeGap=4;
}

message TaskDispatchList{
   repeated bytes DNI=1;
   uint32 nodeId=2;
   uint32 execNodeId=3;
}
 

message MultiTaskOpResultRes{
   int32 errCode=1;
   int32 succNum=2;
}
 
message TaskOpResultList{
    repeated bytes id = 1; 
    repeated int32 RES=2;
    int32 nodeId=3;
    int64 expiredTime=4;
    int32 srcNodeID=5;
}

message UploadShard2CResp{
   int32 RES= 1; 
   string DNSIGN =2;
   uint64 seq=3;
}

message UploadShardReq{ 
   int32 SHARDID=1;
   int32 BPDID = 2; 
   int64 VBI = 3; 
   bytes BPDSIGN=4; 
   bytes DAT=5; 
   bytes VHF=6; 
   bytes USERSIGN=7; 
   string allocId=8;
   int64 HASHID=9;
}

message VoidResp {
}
