package pkt

import (
	"log"

	proto "github.com/golang/protobuf/proto"
	"github.com/yottachain/YTCoreService/env"
)

type MessageInitor func() proto.Message

var ID_CLASS_MAP = make(map[uint16]MessageInitor)
var CLASS_ID_MAP = make(map[string]uint16)

func init() {
	log.SetOutput(&env.LogWrite{})
	init_id_class()
	init_class_id()
}

func init_id_class() {
	ID_CLASS_MAP[0x1757] = func() proto.Message { return &DownloadShardReq{} }
	ID_CLASS_MAP[0x7a56] = func() proto.Message { return &DownloadShardResp{} }
	ID_CLASS_MAP[0x5913] = func() proto.Message { return &ErrorMessage{} }
	ID_CLASS_MAP[0x228b] = func() proto.Message { return &LongResp{} }
	ID_CLASS_MAP[0x12aa] = func() proto.Message { return &NodeRegReq{} }
	ID_CLASS_MAP[0xfb92] = func() proto.Message { return &NodeRegResp{} }
	ID_CLASS_MAP[0xce95] = func() proto.Message { return &ObjectRefer{} }
	ID_CLASS_MAP[0xfde3] = func() proto.Message { return &P2PLocation{} }
	ID_CLASS_MAP[0x799d] = func() proto.Message { return &ShardNode{} }
	ID_CLASS_MAP[0xa583] = func() proto.Message { return &SpotCheckStatus{} }
	ID_CLASS_MAP[0x26d0] = func() proto.Message { return &SpotCheckTask{} }
	ID_CLASS_MAP[0x903a] = func() proto.Message { return &SpotCheckTaskList{} }
	ID_CLASS_MAP[0xc9a9] = func() proto.Message { return &StatusRepReq{} }
	ID_CLASS_MAP[0xfa09] = func() proto.Message { return &StatusRepResp{} }
	ID_CLASS_MAP[0xd761] = func() proto.Message { return &TaskDescription{} }
	ID_CLASS_MAP[0xc258] = func() proto.Message { return &TaskDescriptionCP{} }
	ID_CLASS_MAP[0x68b3] = func() proto.Message { return &TaskDescriptionLRC{} }
	ID_CLASS_MAP[0x2cb0] = func() proto.Message { return &TaskList{} }
	ID_CLASS_MAP[0x8b4d] = func() proto.Message { return &TaskDispatchList{} }
	ID_CLASS_MAP[0x16f3] = func() proto.Message { return &TaskOpResult{} }
	ID_CLASS_MAP[0x93e4] = func() proto.Message { return &MultiTaskOpResultRes{} }
	ID_CLASS_MAP[0x1b31] = func() proto.Message { return &TaskOpResultList{} }
	ID_CLASS_MAP[0xe75c] = func() proto.Message { return &UploadFackShardReq{} }
	ID_CLASS_MAP[0x1978] = func() proto.Message { return &UploadShard2CResp{} }
	ID_CLASS_MAP[0xcb05] = func() proto.Message { return &UploadShardReq{} }
	ID_CLASS_MAP[0xe64f] = func() proto.Message { return &VoidResp{} }
	ID_CLASS_MAP[0xe231] = func() proto.Message { return &DownloadBlockDBResp{} }
	ID_CLASS_MAP[0xff86] = func() proto.Message { return &DownloadBlockInitReq{} }
	ID_CLASS_MAP[0x4cf2] = func() proto.Message { return &DownloadObjectInitResp{} }
	ID_CLASS_MAP[0x267e] = func() proto.Message { return &DownloadBlockInitResp{} }
	ID_CLASS_MAP[0xb31f] = func() proto.Message { return &DownloadObjectInitReq{} }
	ID_CLASS_MAP[0x76a8] = func() proto.Message { return &ListSuperNodeReq{} }
	ID_CLASS_MAP[0x3a77] = func() proto.Message { return &ListSuperNodeResp{} }
	ID_CLASS_MAP[0x0231] = func() proto.Message { return &LoginReq{} }
	ID_CLASS_MAP[0x2a51] = func() proto.Message { return &PreAllocNodeReq{} }
	ID_CLASS_MAP[0x78eb] = func() proto.Message { return &PreAllocNodeResp{} }
	ID_CLASS_MAP[0x30bc] = func() proto.Message { return &QueryUserReq{} }
	ID_CLASS_MAP[0x3531] = func() proto.Message { return &QueryUserResp{} }
	ID_CLASS_MAP[0xd19f] = func() proto.Message { return &RegUserReq{} }
	ID_CLASS_MAP[0xec91] = func() proto.Message { return &RegUserResp{} }
	ID_CLASS_MAP[0x9c15] = func() proto.Message { return &UploadBlockDBReq{} }
	ID_CLASS_MAP[0x99dc] = func() proto.Message { return &UploadBlockDupReq{} }
	ID_CLASS_MAP[0x1d98] = func() proto.Message { return &UploadBlockDupResp{} }
	ID_CLASS_MAP[0xbabc] = func() proto.Message { return &UploadBlockEndReq{} }
	ID_CLASS_MAP[0x35bb] = func() proto.Message { return &UploadBlockEndResp{} }
	ID_CLASS_MAP[0xcad7] = func() proto.Message { return &UploadBlockEndSyncReq{} }
	ID_CLASS_MAP[0xd22f] = func() proto.Message { return &UploadBlockInitReq{} }
	ID_CLASS_MAP[0x5893] = func() proto.Message { return &UploadBlockInitResp{} }
	ID_CLASS_MAP[0x2797] = func() proto.Message { return &UploadObjectEndReq{} }
	ID_CLASS_MAP[0xcdf2] = func() proto.Message { return &UploadObjectInitReq{} }
	ID_CLASS_MAP[0x014c] = func() proto.Message { return &UploadObjectInitResp{} }
	ID_CLASS_MAP[0x506c] = func() proto.Message { return &ActiveCache{} }
	ID_CLASS_MAP[0xd927] = func() proto.Message { return &GetBlockUsedSpace{} }
	ID_CLASS_MAP[0x9edf] = func() proto.Message { return &NodeSyncReq{} }
	ID_CLASS_MAP[0xe5e2] = func() proto.Message { return &RelationShipSum{} }
	ID_CLASS_MAP[0xb172] = func() proto.Message { return &Relationship{} }
	ID_CLASS_MAP[0x2e42] = func() proto.Message { return &SaveObjectMetaReq{} }
	ID_CLASS_MAP[0xb5ae] = func() proto.Message { return &SaveObjectMetaResp{} }
	ID_CLASS_MAP[0x71ae] = func() proto.Message { return &TotalReq{} }
	ID_CLASS_MAP[0x38f0] = func() proto.Message { return &TotalResp{} }
	ID_CLASS_MAP[0x55e0] = func() proto.Message { return &UpdateDNIReq{} }
	ID_CLASS_MAP[0xb850] = func() proto.Message { return &UpdateDNIMutiReq{} }
	ID_CLASS_MAP[0x4d27] = func() proto.Message { return &UserListReq{} }
	ID_CLASS_MAP[0x9e0d] = func() proto.Message { return &UserListResp{} }
	ID_CLASS_MAP[0x78c3] = func() proto.Message { return &UserSpaceReq{} }
	ID_CLASS_MAP[0xd538] = func() proto.Message { return &UserSpaceResp{} }
	ID_CLASS_MAP[0xc487] = func() proto.Message { return &GetNodeCapacityReq{} }
	ID_CLASS_MAP[0xe684] = func() proto.Message { return &GetNodeCapacityResp{} }
	ID_CLASS_MAP[0x4bc6] = func() proto.Message { return &ListDNIReq{} }
	ID_CLASS_MAP[0xd6cb] = func() proto.Message { return &ListDNIResp{} }
	ID_CLASS_MAP[0x7d7a] = func() proto.Message { return &CopyObjectReq{} }
	ID_CLASS_MAP[0x67fc] = func() proto.Message { return &CopyObjectResp{} }
	ID_CLASS_MAP[0x3390] = func() proto.Message { return &CreateBucketReq{} }
	ID_CLASS_MAP[0x202c] = func() proto.Message { return &DeleteBucketReq{} }
	ID_CLASS_MAP[0xfc19] = func() proto.Message { return &DeleteFileReq{} }
	ID_CLASS_MAP[0x8658] = func() proto.Message { return &DownloadFileReq{} }
	ID_CLASS_MAP[0xb30b] = func() proto.Message { return &GetBucketReq{} }
	ID_CLASS_MAP[0x43f2] = func() proto.Message { return &GetBucketResp{} }
	ID_CLASS_MAP[0xe703] = func() proto.Message { return &GetObjectReq{} }
	ID_CLASS_MAP[0x85a7] = func() proto.Message { return &GetObjectResp{} }
	ID_CLASS_MAP[0x90f0] = func() proto.Message { return &ListBucketReq{} }
	ID_CLASS_MAP[0xc090] = func() proto.Message { return &ListBucketResp{} }
	ID_CLASS_MAP[0xc4f8] = func() proto.Message { return &ListObjectReq{} }
	ID_CLASS_MAP[0x06c5] = func() proto.Message { return &ListObjectResp{} }
	ID_CLASS_MAP[0x276d] = func() proto.Message { return &ListObjectRespV2{} }
	ID_CLASS_MAP[0x7e07] = func() proto.Message { return &UpdateBucketReq{} }
	ID_CLASS_MAP[0x62fb] = func() proto.Message { return &UploadFileReq{} }
	ID_CLASS_MAP[0xe26d] = func() proto.Message { return &StringMap{} }
	ID_CLASS_MAP[0xd09e] = func() proto.Message { return &CopyObjectReqV2{} }
	ID_CLASS_MAP[0xdbc2] = func() proto.Message { return &CreateBucketReqV2{} }
	ID_CLASS_MAP[0xd6f3] = func() proto.Message { return &DeleteBucketReqV2{} }
	ID_CLASS_MAP[0x4076] = func() proto.Message { return &DeleteFileReqV2{} }
	ID_CLASS_MAP[0x3288] = func() proto.Message { return &GetBucketReqV2{} }
	ID_CLASS_MAP[0x0d8e] = func() proto.Message { return &GetObjectReqV2{} }
	ID_CLASS_MAP[0xfd39] = func() proto.Message { return &ListBucketReqV2{} }
	ID_CLASS_MAP[0xc23f] = func() proto.Message { return &ListObjectReqV2{} }
	ID_CLASS_MAP[0xde6c] = func() proto.Message { return &UpdateBucketReqV2{} }
	ID_CLASS_MAP[0x48bf] = func() proto.Message { return &UploadFileReqV2{} }
	ID_CLASS_MAP[0x775e] = func() proto.Message { return &ActiveCacheV2{} }
	ID_CLASS_MAP[0xe66e] = func() proto.Message { return &DownloadBlockInitReqV2{} }
	ID_CLASS_MAP[0xbef5] = func() proto.Message { return &DownloadFileReqV2{} }
	ID_CLASS_MAP[0x75c5] = func() proto.Message { return &DownloadObjectInitReqV2{} }
	ID_CLASS_MAP[0x1d20] = func() proto.Message { return &PreAllocNodeReqV2{} }
	ID_CLASS_MAP[0x197f] = func() proto.Message { return &QueryUserReqV2{} }
	ID_CLASS_MAP[0xf8a9] = func() proto.Message { return &RegUserReqV2{} }
	ID_CLASS_MAP[0x9517] = func() proto.Message { return &UploadBlockDBReqV2{} }
	ID_CLASS_MAP[0x657e] = func() proto.Message { return &UploadBlockDupReqV2{} }
	ID_CLASS_MAP[0xbc17] = func() proto.Message { return &UploadBlockEndReqV2{} }
	ID_CLASS_MAP[0x5753] = func() proto.Message { return &UploadBlockEndSyncReqV2{} }
	ID_CLASS_MAP[0x56cb] = func() proto.Message { return &CheckBlockDupReq{} }
	ID_CLASS_MAP[0xe299] = func() proto.Message { return &UploadBlockInitReqV2{} }
	ID_CLASS_MAP[0xa52b] = func() proto.Message { return &UploadObjectEndReqV2{} }
	ID_CLASS_MAP[0xf380] = func() proto.Message { return &UploadObjectInitReqV2{} }
}

func init_class_id() {
	CLASS_ID_MAP["DownloadShardReq"] = 0x1757
	CLASS_ID_MAP["DownloadShardResp"] = 0x7a56
	CLASS_ID_MAP["ErrorMessage"] = 0x5913
	CLASS_ID_MAP["LongResp"] = 0x228b
	CLASS_ID_MAP["NodeRegReq"] = 0x12aa
	CLASS_ID_MAP["NodeRegResp"] = 0xfb92
	CLASS_ID_MAP["ObjectRefer"] = 0xce95
	CLASS_ID_MAP["P2PLocation"] = 0xfde3
	CLASS_ID_MAP["ShardNode"] = 0x799d
	CLASS_ID_MAP["SpotCheckStatus"] = 0xa583
	CLASS_ID_MAP["SpotCheckTask"] = 0x26d0
	CLASS_ID_MAP["SpotCheckTaskList"] = 0x903a
	CLASS_ID_MAP["StatusRepReq"] = 0xc9a9
	CLASS_ID_MAP["StatusRepResp"] = 0xfa09
	CLASS_ID_MAP["TaskDescription"] = 0xd761
	CLASS_ID_MAP["TaskDescriptionCP"] = 0xc258
	CLASS_ID_MAP["TaskDescriptionLRC"] = 0x68b3
	CLASS_ID_MAP["TaskList"] = 0x2cb0
	CLASS_ID_MAP["TaskDispatchList"] = 0x8b4d
	CLASS_ID_MAP["TaskOpResult"] = 0x16f3
	CLASS_ID_MAP["MultiTaskOpResultRes"] = 0x93e4
	CLASS_ID_MAP["TaskOpResultList"] = 0x1b31
	CLASS_ID_MAP["UploadFackShardReq"] = 0xe75c
	CLASS_ID_MAP["UploadShard2CResp"] = 0x1978
	CLASS_ID_MAP["UploadShardReq"] = 0xcb05
	CLASS_ID_MAP["VoidResp"] = 0xe64f
	CLASS_ID_MAP["DownloadBlockDBResp"] = 0xe231
	CLASS_ID_MAP["DownloadBlockInitReq"] = 0xff86
	CLASS_ID_MAP["DownloadObjectInitResp"] = 0x4cf2
	CLASS_ID_MAP["DownloadBlockInitResp"] = 0x267e
	CLASS_ID_MAP["DownloadObjectInitReq"] = 0xb31f
	CLASS_ID_MAP["ListSuperNodeReq"] = 0x76a8
	CLASS_ID_MAP["ListSuperNodeResp"] = 0x3a77
	CLASS_ID_MAP["LoginReq"] = 0x0231
	CLASS_ID_MAP["PreAllocNodeReq"] = 0x2a51
	CLASS_ID_MAP["PreAllocNodeResp"] = 0x78eb
	CLASS_ID_MAP["QueryUserReq"] = 0x30bc
	CLASS_ID_MAP["QueryUserResp"] = 0x3531
	CLASS_ID_MAP["RegUserReq"] = 0xd19f
	CLASS_ID_MAP["RegUserResp"] = 0xec91
	CLASS_ID_MAP["UploadBlockDBReq"] = 0x9c15
	CLASS_ID_MAP["UploadBlockDupReq"] = 0x99dc
	CLASS_ID_MAP["UploadBlockDupResp"] = 0x1d98
	CLASS_ID_MAP["UploadBlockEndReq"] = 0xbabc
	CLASS_ID_MAP["UploadBlockEndResp"] = 0x35bb
	CLASS_ID_MAP["UploadBlockEndSyncReq"] = 0xcad7
	CLASS_ID_MAP["UploadBlockInitReq"] = 0xd22f
	CLASS_ID_MAP["UploadBlockInitResp"] = 0x5893
	CLASS_ID_MAP["UploadObjectEndReq"] = 0x2797
	CLASS_ID_MAP["UploadObjectInitReq"] = 0xcdf2
	CLASS_ID_MAP["UploadObjectInitResp"] = 0x014c
	CLASS_ID_MAP["ActiveCache"] = 0x506c
	CLASS_ID_MAP["GetBlockUsedSpace"] = 0xd927
	CLASS_ID_MAP["NodeSyncReq"] = 0x9edf
	CLASS_ID_MAP["RelationShipSum"] = 0xe5e2
	CLASS_ID_MAP["Relationship"] = 0xb172
	CLASS_ID_MAP["SaveObjectMetaReq"] = 0x2e42
	CLASS_ID_MAP["SaveObjectMetaResp"] = 0xb5ae
	CLASS_ID_MAP["TotalReq"] = 0x71ae
	CLASS_ID_MAP["TotalResp"] = 0x38f0
	CLASS_ID_MAP["UpdateDNIReq"] = 0x55e0
	CLASS_ID_MAP["UpdateDNIMutiReq"] = 0xb850
	CLASS_ID_MAP["UserListReq"] = 0x4d27
	CLASS_ID_MAP["UserListResp"] = 0x9e0d
	CLASS_ID_MAP["UserSpaceReq"] = 0x78c3
	CLASS_ID_MAP["UserSpaceResp"] = 0xd538
	CLASS_ID_MAP["GetNodeCapacityReq"] = 0xc487
	CLASS_ID_MAP["GetNodeCapacityResp"] = 0xe684
	CLASS_ID_MAP["ListDNIReq"] = 0x4bc6
	CLASS_ID_MAP["ListDNIResp"] = 0xd6cb
	CLASS_ID_MAP["CopyObjectReq"] = 0x7d7a
	CLASS_ID_MAP["CopyObjectResp"] = 0x67fc
	CLASS_ID_MAP["CreateBucketReq"] = 0x3390
	CLASS_ID_MAP["DeleteBucketReq"] = 0x202c
	CLASS_ID_MAP["DeleteFileReq"] = 0xfc19
	CLASS_ID_MAP["DownloadFileReq"] = 0x8658
	CLASS_ID_MAP["GetBucketReq"] = 0xb30b
	CLASS_ID_MAP["GetBucketResp"] = 0x43f2
	CLASS_ID_MAP["GetObjectReq"] = 0xe703
	CLASS_ID_MAP["GetObjectResp"] = 0x85a7
	CLASS_ID_MAP["ListBucketReq"] = 0x90f0
	CLASS_ID_MAP["ListBucketResp"] = 0xc090
	CLASS_ID_MAP["ListObjectReq"] = 0xc4f8
	CLASS_ID_MAP["ListObjectResp"] = 0x06c5
	CLASS_ID_MAP["ListObjectRespV2"] = 0x276d
	CLASS_ID_MAP["UpdateBucketReq"] = 0x7e07
	CLASS_ID_MAP["UploadFileReq"] = 0x62fb
	CLASS_ID_MAP["StringMap"] = 0xe26d
	CLASS_ID_MAP["CopyObjectReqV2"] = 0xd09e
	CLASS_ID_MAP["CreateBucketReqV2"] = 0xdbc2
	CLASS_ID_MAP["DeleteBucketReqV2"] = 0xd6f3
	CLASS_ID_MAP["DeleteFileReqV2"] = 0x4076
	CLASS_ID_MAP["DeleteObjectReqV2"] = 0xe9f5
	CLASS_ID_MAP["GetBucketReqV2"] = 0x3288
	CLASS_ID_MAP["GetObjectReqV2"] = 0x0d8e
	CLASS_ID_MAP["ListBucketReqV2"] = 0xfd39
	CLASS_ID_MAP["ListObjectReqV2"] = 0xc23f
	CLASS_ID_MAP["UpdateBucketReqV2"] = 0xde6c
	CLASS_ID_MAP["UploadFileReqV2"] = 0x48bf
	CLASS_ID_MAP["ActiveCacheV2"] = 0x775e
	CLASS_ID_MAP["DownloadBlockInitReqV2"] = 0xe66e
	CLASS_ID_MAP["DownloadFileReqV2"] = 0xbef5
	CLASS_ID_MAP["DownloadObjectInitReqV2"] = 0x75c5
	CLASS_ID_MAP["PreAllocNodeReqV2"] = 0x1d20
	CLASS_ID_MAP["QueryUserReqV2"] = 0x197f
	CLASS_ID_MAP["RegUserReqV2"] = 0xf8a9
	CLASS_ID_MAP["UploadBlockDBReqV2"] = 0x9517
	CLASS_ID_MAP["UploadBlockDupReqV2"] = 0x657e
	CLASS_ID_MAP["UploadBlockEndReqV2"] = 0xbc17
	CLASS_ID_MAP["UploadBlockEndSyncReqV2"] = 0x5753
	CLASS_ID_MAP["CheckBlockDupReq"] = 0x56cb
	CLASS_ID_MAP["UploadBlockInitReqV2"] = 0xe299
	CLASS_ID_MAP["UploadObjectEndReqV2"] = 0xa52b
	CLASS_ID_MAP["UploadObjectInitReqV2"] = 0xf380
}
